--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,7 +4,7 @@
     margin:0;
     padding:0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #fc6c05;
     width: 1350px;
     margin-left:auto;
     margin-right:auto;
@@ -21,8 +21,8 @@
     text-decoration: none;
 }
 #navbarlist a:hover {
-    background-color: #555;
-    color: white;    
+    background-color: #fc9b55;
+    color: black;    
 }
 a {font-size: 20px;}
 
