--- a/CSS/style.css
+++ b/CSS/style.css
@@ -32,3 +32,8 @@ a {
 	font-family: Brushstroke, fantasy;
 	font-size: 30px;
 }
+
+table, th, td{
+	border: 1px solid black;
+	border-collapse: collapse;
+}
