--- a/CSS/style.css
+++ b/CSS/style.css
@@ -28,7 +28,7 @@ a {
 	font-size: 20px;
 }
 
-#special{
+#special {
 	font-family: Brushstroke, fantasy;
 	font-size: 30px;
 }
@@ -36,4 +36,27 @@ a {
 table, th, td{
 	border: 1px solid black;
 	border-collapse: collapse;
+}
+
+#nomatch {
+    font-size: 50px;
+
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 382px 382px 382px;
+    padding-top: 50px;
+    padding-right: 133px;
+    padding-left: 133px;
+    grid-column-gap: 50px;
+    grid-row-gap: 50px;
+}
+
+.grid-item {
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid black;
+    padding: 25px;
+    font-size: 20px;
+    text-align: center;
 }
