change my profile table s

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -58,7 +58,7 @@ tbody {
 	color: white;
 	border-color: #ff492d;
 	border-width: 4px;
-	background-color: #ff573d;
+	background-color: #ff8775;
 }
 
 #profileTable td {
