--- a/CSS/style.css
+++ b/CSS/style.css
@@ -119,7 +119,7 @@ tbody {
 
 /*Description for no match*/
 #nomatch {
-    font-size: 50px;
+    font-size: 60px;
 }
 
 /*Table on matches page*/
@@ -138,6 +138,13 @@ tbody {
     background-color: #6bd6d2;
 }
 
+#sadOrange {
+    
+    height: 100px;
+    width: 100px;
+    vertical-align: middle;
+
+}
 #cool {
     color: #fc6c05;
     font-family: "Palatino Linotype";
