Added clearer instructions for profile page

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -66,6 +66,11 @@ tbody {
 	border-width: 4px;
 	color: #ff573d;
 }
+
+#profileNote {
+    color: black;
+    font-size: 25px;
+}
 /*Explore page tables*/
 #courseCodeTable {
     border-width: 5px;
