Added logo onto all pages and changed font size of nav bar slightly (wider a bit)

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,8 +1,8 @@
 /*Navigation Bar*/
 #navbar {
     list-style-type: none;
-    margin:0;
-    padding:0;
+    margin: 0px;
+    padding: 0px;
     overflow: hidden;
     background-color: #fc6c05;
     width: 1300px;
@@ -25,7 +25,13 @@
     color: black;    
 }
 a {
-	font-size: 20px;
+	font-size: 25px;
+}
+
+/*logo*/
+#logo {
+    width: 445px;
+    height: 55px;
 }
 
 /*General table*/
