Just edited comments for grid layout

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -115,7 +115,7 @@ tbody {
     font-weight: bold;
 }
 
-/*Offerings layout on matches page*/
+/*Offerings grid layout on matches page*/
 .grid-container {
     display: grid;
     grid-template-columns: 382px 382px 382px;
